0.9/_sources/checks_gallery/tabular/train_test_validation/plot_train_test_samples_mix.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "checks_gallery/tabular/train_test_validation/plot_train_test_samples_mix.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_checks_gallery_tabular_train_test_validation_plot_train_test_samples_mix.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_checks_gallery_tabular_train_test_validation_plot_train_test_samples_mix.py:


.. _plot_tabular_train_test_samples_mix:

Train Test Samples Mix
**********************
This notebook provides an overview for using and understanding the Train Test Samples Mix check.

**Structure:**

* `Why is samples mix unwanted? <#why-is-samples-mix-unwanted>`__
* `Run the check <#run-the-check>`__
* `Define a condition <#define-a-condition>`__

Why is samples mix unwanted?
=============================
Samples mix is when the train and test datasets have some samples in common.
We use the test dataset in order to evaluate our model performance, and having samples in common with the train dataset
will lead to biased metrics, which does not represent the real performance we will get in a real scenario. Therefore,
we always want to avoid samples mix.

Run the check
=============
We will run the check on the iris dataset.

.. GENERATED FROM PYTHON SOURCE LINES 26-40

.. code-block:: default


    from deepchecks.tabular import Dataset
    from deepchecks.tabular.checks import TrainTestSamplesMix
    from deepchecks.tabular.datasets.classification import iris

    # Create data with leakage from train to test
    train, test = iris.load_data()
    bad_test_df = test.data.append(train.data.iloc[[0, 1, 1, 2, 3, 4, 2, 2, 10]], ignore_index=True)
    bad_test = test.copy(bad_test_df)

    check = TrainTestSamplesMix()
    result = check.run(test_dataset=bad_test, train_dataset=train)
    result





.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    classification_label value for label type is deprecated, allowed task types are multiclass, binary and regression.


.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Train Test Samples Mix</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"094c720214ef48eda71acb9fc8e55974": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_1630b973996f4956a9a97ac481ad4370", "IPY_MODEL_395a119dd8674d719914f9f5d32dcba3", "IPY_MODEL_8e1a51a1911b4b63843028d3f5d0511e", "IPY_MODEL_8390b37c10c14314a04ea64c65301be6"], "layout": "IPY_MODEL_269a01686a3a47dcac7df75f5d7ad919"}}, "1630b973996f4956a9a97ac481ad4370": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_15f39db3f5d14c33a4364bb3ca83842a", "style": "IPY_MODEL_694d49ed15334ff6a1908f1263fc04dd", "value": "<h4><b>Train Test Samples Mix</b></h4>"}}, "15f39db3f5d14c33a4364bb3ca83842a": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "694d49ed15334ff6a1908f1263fc04dd": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "395a119dd8674d719914f9f5d32dcba3": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_0ff034a933a74d6299534f46023186e7", "style": "IPY_MODEL_07f189015d604d38bbe85e64a8a0e4de", "value": "<p>Detect samples in the test data that appear also in training data. <a href=\"https://docs.deepchecks.com/0.9/checks_gallery/tabular/train_test_validation/plot_train_test_samples_mix.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "0ff034a933a74d6299534f46023186e7": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "07f189015d604d38bbe85e64a8a0e4de": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "8e1a51a1911b4b63843028d3f5d0511e": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_e19a56b63d77444c940c701983c35fe3", "style": "IPY_MODEL_93607a0caae4488e8bb09c6d2fa9e3b2"}}, "e19a56b63d77444c940c701983c35fe3": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "93607a0caae4488e8bb09c6d2fa9e3b2": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "8390b37c10c14314a04ea64c65301be6": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "children": ["IPY_MODEL_6a7938387b754499b6bb7db0677611af", "IPY_MODEL_27786bf983364a849a29bb70f7ecaa6a", "IPY_MODEL_e9af8f01887444e7a2296b45154d5615"], "layout": "IPY_MODEL_4fff1b643efc4e70b59b714e18f3b121"}}, "6a7938387b754499b6bb7db0677611af": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_2de2c246a7674b7dbf06b8b2f814131e", "style": "IPY_MODEL_4fa571ee331b445fa6a8edc33d189edf", "value": "<h5><b>Additional Outputs</b></h5>"}}, "2de2c246a7674b7dbf06b8b2f814131e": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "4fa571ee331b445fa6a8edc33d189edf": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "27786bf983364a849a29bb70f7ecaa6a": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_f03308f325414d1a957cdd01f8cbd8ab", "style": "IPY_MODEL_db839f8c80df4a389093936cde0fc9cf", "value": "<div>21.28% (10 / 47)                      of test data samples appear in train data</div>"}}, "f03308f325414d1a957cdd01f8cbd8ab": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "db839f8c80df4a389093936cde0fc9cf": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "e9af8f01887444e7a2296b45154d5615": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_531979d1add44d8f85e441241ac99f97", "style": "IPY_MODEL_7b50d7d30a264d47ad34134ed0c16283", "value": "<style type=\"text/css\">\n#T_c1422_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_c1422_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_c1422_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_c1422_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_c1422_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_c1422_\">\n  <thead>\n    <tr>\n      <th class=\"blank level0\" >&nbsp;</th>\n      <th class=\"col_heading level0 col0\" >sepal length (cm)</th>\n      <th class=\"col_heading level0 col1\" >sepal width (cm)</th>\n      <th class=\"col_heading level0 col2\" >petal length (cm)</th>\n      <th class=\"col_heading level0 col3\" >petal width (cm)</th>\n      <th class=\"col_heading level0 col4\" >target</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th id=\"T_c1422_level0_row0\" class=\"row_heading level0 row0\" >Train indices: 2\nTest indices: 44, 45, 41</th>\n      <td id=\"T_c1422_row0_col0\" class=\"data row0 col0\" >4.40</td>\n      <td id=\"T_c1422_row0_col1\" class=\"data row0 col1\" >2.90</td>\n      <td id=\"T_c1422_row0_col2\" class=\"data row0 col2\" >1.40</td>\n      <td id=\"T_c1422_row0_col3\" class=\"data row0 col3\" >0.20</td>\n      <td id=\"T_c1422_row0_col4\" class=\"data row0 col4\" >0.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_c1422_level0_row1\" class=\"row_heading level0 row1\" >Train indices: 1\nTest indices: 39, 40</th>\n      <td id=\"T_c1422_row1_col0\" class=\"data row1 col0\" >4.90</td>\n      <td id=\"T_c1422_row1_col1\" class=\"data row1 col1\" >3.00</td>\n      <td id=\"T_c1422_row1_col2\" class=\"data row1 col2\" >1.40</td>\n      <td id=\"T_c1422_row1_col3\" class=\"data row1 col3\" >0.20</td>\n      <td id=\"T_c1422_row1_col4\" class=\"data row1 col4\" >0.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_c1422_level0_row2\" class=\"row_heading level0 row2\" >Train indices: 4\nTest indices: 43</th>\n      <td id=\"T_c1422_row2_col0\" class=\"data row2 col0\" >4.90</td>\n      <td id=\"T_c1422_row2_col1\" class=\"data row2 col1\" >2.50</td>\n      <td id=\"T_c1422_row2_col2\" class=\"data row2 col2\" >4.50</td>\n      <td id=\"T_c1422_row2_col3\" class=\"data row2 col3\" >1.70</td>\n      <td id=\"T_c1422_row2_col4\" class=\"data row2 col4\" >2.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_c1422_level0_row3\" class=\"row_heading level0 row3\" >Train indices: 0\nTest indices: 38</th>\n      <td id=\"T_c1422_row3_col0\" class=\"data row3 col0\" >5.00</td>\n      <td id=\"T_c1422_row3_col1\" class=\"data row3 col1\" >2.00</td>\n      <td id=\"T_c1422_row3_col2\" class=\"data row3 col2\" >3.50</td>\n      <td id=\"T_c1422_row3_col3\" class=\"data row3 col3\" >1.00</td>\n      <td id=\"T_c1422_row3_col4\" class=\"data row3 col4\" >1.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_c1422_level0_row4\" class=\"row_heading level0 row4\" >Train indices: 3\nTest indices: 42</th>\n      <td id=\"T_c1422_row4_col0\" class=\"data row4 col0\" >5.00</td>\n      <td id=\"T_c1422_row4_col1\" class=\"data row4 col1\" >2.30</td>\n      <td id=\"T_c1422_row4_col2\" class=\"data row4 col2\" >3.30</td>\n      <td id=\"T_c1422_row4_col3\" class=\"data row4 col3\" >1.00</td>\n      <td id=\"T_c1422_row4_col4\" class=\"data row4 col4\" >1.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_c1422_level0_row5\" class=\"row_heading level0 row5\" >Train indices: 30\nTest indices: 28</th>\n      <td id=\"T_c1422_row5_col0\" class=\"data row5 col0\" >5.80</td>\n      <td id=\"T_c1422_row5_col1\" class=\"data row5 col1\" >2.70</td>\n      <td id=\"T_c1422_row5_col2\" class=\"data row5 col2\" >5.10</td>\n      <td id=\"T_c1422_row5_col3\" class=\"data row5 col3\" >1.90</td>\n      <td id=\"T_c1422_row5_col4\" class=\"data row5 col4\" >2.00</td>\n    </tr>\n    <tr>\n      <th id=\"T_c1422_level0_row6\" class=\"row_heading level0 row6\" >Train indices: 10\nTest indices: 46</th>\n      <td id=\"T_c1422_row6_col0\" class=\"data row6 col0\" >5.80</td>\n      <td id=\"T_c1422_row6_col1\" class=\"data row6 col1\" >4.00</td>\n      <td id=\"T_c1422_row6_col2\" class=\"data row6 col2\" >1.20</td>\n      <td id=\"T_c1422_row6_col3\" class=\"data row6 col3\" >0.20</td>\n      <td id=\"T_c1422_row6_col4\" class=\"data row6 col4\" >0.00</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "531979d1add44d8f85e441241ac99f97": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "7b50d7d30a264d47ad34134ed0c16283": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "4fff1b643efc4e70b59b714e18f3b121": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "269a01686a3a47dcac7df75f5d7ad919": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "094c720214ef48eda71acb9fc8e55974"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 41-45

Define a condition
==================
We can define a condition that enforces that the ratio of samples in test which appears in train is below a given
amount, the default is `0.1`.

.. GENERATED FROM PYTHON SOURCE LINES 45-48

.. code-block:: default

    check = TrainTestSamplesMix().add_condition_duplicates_ratio_less_or_equal()
    result = check.run(test_dataset=bad_test, train_dataset=train)
    result.show(show_additional_outputs=False)





.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Train Test Samples Mix</title>
        <link rel="icon" type="image/x-icon" href="https://deepchecks.com/wp-content/themes/deepchecks/assets/favicons/favicon.ico">
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
                background-color: white;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
    </head>
    <body>
        <script src="https://unpkg.com/@jupyter-widgets/html-manager@^0.20.1/dist/embed.js" crossorigin="anonymous"></script>
    

    <script type="application/vnd.jupyter.widget-state+json">
    {"version_major": 2, "version_minor": 0, "state": {"3129c03cd58a4280ba4fb30b48cea11c": {"model_name": "VBoxModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": ["rendered_html", "jp-RenderedHTMLCommon", "jp-RenderedHTML", "jp-OutputArea-output"], "children": ["IPY_MODEL_f7cd6e21759f427c96a04f179fd4038f", "IPY_MODEL_779aedb44ecc4245a187a79307c2c9a1", "IPY_MODEL_99f21858efb84462ad90943f70fa3079"], "layout": "IPY_MODEL_1586e05e737745669386109d0f55849f"}}, "f7cd6e21759f427c96a04f179fd4038f": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_e4ac9eefa6704a20b1cde2a0b49e91ee", "style": "IPY_MODEL_e622ce6da9324eed99f65702cb05d4b1", "value": "<h4><b>Train Test Samples Mix</b></h4>"}}, "e4ac9eefa6704a20b1cde2a0b49e91ee": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "e622ce6da9324eed99f65702cb05d4b1": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "779aedb44ecc4245a187a79307c2c9a1": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_c93990c8ef264ae9b85ff0738eefdd65", "style": "IPY_MODEL_3221537b6beb495a895028f368e6f5d1", "value": "<p>Detect samples in the test data that appear also in training data. <a href=\"https://docs.deepchecks.com/0.9/checks_gallery/tabular/train_test_validation/plot_train_test_samples_mix.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p>"}}, "c93990c8ef264ae9b85ff0738eefdd65": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "3221537b6beb495a895028f368e6f5d1": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "99f21858efb84462ad90943f70fa3079": {"model_name": "HTMLModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {"_dom_classes": [], "layout": "IPY_MODEL_18ba49ddda984d869e600ec8c76408af", "style": "IPY_MODEL_67a6df5c68a34dca9a1a58b5f90a5904", "value": "<h5><b>Conditions Summary</b></h5><style type=\"text/css\">\n#T_58045_ table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_58045_ thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_58045_ tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_58045_ th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_58045_ td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_58045_\">\n  <thead>\n    <tr>\n      <th class=\"col_heading level0 col0\" >Status</th>\n      <th class=\"col_heading level0 col1\" >Condition</th>\n      <th class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_58045_row0_col0\" class=\"data row0 col0\" ><div style=\"color: red;text-align: center\">\u2716</div></td>\n      <td id=\"T_58045_row0_col1\" class=\"data row0 col1\" >Percentage of test data samples that appear in train data is less or equal to 10%</td>\n      <td id=\"T_58045_row0_col2\" class=\"data row0 col2\" >Percent of test data samples that appear in train data: 21.28%</td>\n    </tr>\n  </tbody>\n</table>\n"}}, "18ba49ddda984d869e600ec8c76408af": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}, "67a6df5c68a34dca9a1a58b5f90a5904": {"model_name": "DescriptionStyleModel", "model_module": "@jupyter-widgets/controls", "model_module_version": "1.5.0", "state": {}}, "1586e05e737745669386109d0f55849f": {"model_name": "LayoutModel", "model_module": "@jupyter-widgets/base", "model_module_version": "1.2.0", "state": {}}}}
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "3129c03cd58a4280ba4fb30b48cea11c"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.804 seconds)


.. _sphx_glr_download_checks_gallery_tabular_train_test_validation_plot_train_test_samples_mix.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_train_test_samples_mix.py <plot_train_test_samples_mix.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_train_test_samples_mix.ipynb <plot_train_test_samples_mix.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
